--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 /.env
 /.venv
 /__pycache__
-/time_tracker/tt.db
-/time_tracker/__pycache__
-/time_tracker/tt_app/__pycache__
+time_tracker/tt.db
+time_tracker/__pycache__
+time_tracker/tt_app/__pycache__
