--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,3 +9,7 @@ services:
             - type: bind
               source: .
               target: /home/splaq/docker/timetrackerapp
+        networks:
+            default:
+                external:
+                    name: nginx-proxy-manager_default
