--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,8 @@ services:
             - type: bind
               source: .
               target: /home/splaq/docker/timetrackerapp
-              
+
     networks:
-        default: 
-            name: nginx-proxy-manager_default
+        default:
+            external:
+                name: nginx-proxy-manager_default
