--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,8 @@ services:
     api:
         build: .
         image: timetracker:latest
+        env_file:
+            - ./.env
         ports:
             - 5555:5555
         volumes:
